# cousre_project

./: db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
tests/: test_admin.py  test_admin_panel.py
warehouse/: admin.py  models.py
warehouse/management/commands/: fill_db.py
warehouse/migrations/: 0001_initial.py  0002_category_alter_material_options_and_more.py  0003_alter_order_customer_alter_order_material_and_more.py
warehouse/templates/admin/: dashboard.html  material_changelist.html  order_changelist.html
warehouse_system/: settings.py  urls.py
